Updated run script